OutfitkartApp/src/objects/Outfit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Outfits</relationshipLabel>
        <relationshipName>Outfits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Barbour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fred Perry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hacket London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Levi&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paul Smith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ralph Lauren</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reiss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ted Backer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tommy Hilfiger</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Evening_Style__c</fullName>
        <label>Evening Style</label>
        <picklist>
            <picklistValues>
                <fullName>Bold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dapper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trendy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shirt_Fit__c</fullName>
        <label>Shirt Fit</label>
        <picklist>
            <picklistValues>
                <fullName>Slim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relaxed Fit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <picklist>
            <picklistValues>
                <fullName>LARGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-LARGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-SMALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XX-LARGE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trousers_Fit__c</fullName>
        <label>Trousers Fit</label>
        <picklist>
            <picklistValues>
                <fullName>Slim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relaxed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Style__c</fullName>
        <label>Work Style</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trendy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Outfit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Outfit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outfits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>